# libqicore

./: .gitignore  CMakeLists.txt  README  package.xml  project.json  qiproject.xml
dox/: Doxyfile
libqicore/: CMakeLists.txt
libqicore-compat/: CMakeLists.txt  README  qiproject.xml
libqicore-compat/python/: CMakeLists.txt
libqicore-compat/python/qicorecompat/: __init__.py  behavior.py  controlflowdiagram.py  framemanager.py  qicorememorywatcher.py  resourcemanager.py  timeline.py
libqicore-compat/python/src/: qicore.i
libqicore-compat/python/tests/: parameters.xar  test_all.sh
libqicore-compat/python/tests/behavior2/: B_0_0_B1_0_0_Light_AskForAttentionEyes1.xml  B_0_0_Hello1.xml  behavior.xar
libqicore-compat/qicore-compat/: api.hpp  behaviorexecuter.hpp  box.hpp  statemachine.hpp  timeline.hpp  transition.hpp
libqicore-compat/qicore-compat/model/: actuatorcurvemodel.hpp  actuatorlistmodel.hpp  animationmodel.hpp  behaviorkeyframemodel.hpp  behaviorlayermodel.hpp  behaviorsequencemodel.hpp  bitmapmodel.hpp  boxinstancemodel.hpp  boxinterfacemodel.hpp  choicemodel.hpp  choregrapheprojectmodel.hpp  contentmodel.hpp  contentsmodel.hpp  flowdiagrammodel.hpp  inputmodel.hpp  keymodel.hpp  linkmodel.hpp  outputmodel.hpp  parametermodel.hpp  parametervaluemodel.hpp  resourcemodel.hpp  tangentmodel.hpp
libqicore-compat/src/: actuatorcurve.cpp  asyncexecuter.cpp  asyncexecuter.hpp  behaviorexecuter.cpp  behaviorexecuter_p.hpp  box.cpp  box_p.hpp  pythoncallback.cpp  pythoncallback.hpp  serial.cpp  serial.hpp  statemachine.cpp  statemachine_p.hpp  timeline.cpp  timeline_p.hpp  transition.cpp  transition_p.hpp  xmlutils.cpp  xmlutils.hpp
libqicore-compat/src/model/: actuatorcurvemodel.cpp  actuatorcurvemodel_p.hpp  actuatorlistmodel.cpp  actuatorlistmodel_p.hpp  animationmodel.cpp  animationmodel_p.hpp  behaviorkeyframemodel.cpp  behaviorkeyframemodel_p.hpp  behaviorlayermodel.cpp  behaviorlayermodel_p.hpp  behaviorsequencemodel.cpp  behaviorsequencemodel_p.hpp  bitmapmodel.cpp  bitmapmodel_p.hpp  boxinstancemodel.cpp  boxinstancemodel_p.hpp  boxinterfacemodel.cpp  boxinterfacemodel_p.hpp  choicemodel.cpp  choicemodel_p.hpp  choregrapheprojectmodel.cpp  choregrapheprojectmodel_p.hpp  contentmodel.cpp  contentmodel_p.hpp  contentsmodel.cpp  contentsmodel_p.hpp  flowdiagrammodel.cpp  flowdiagrammodel_p.hpp  inputmodel.cpp  inputmodel_p.hpp  keymodel.cpp  keymodel_p.hpp  linkmodel.cpp  linkmodel_p.hpp  outputmodel.cpp  outputmodel_p.hpp  parametermodel.cpp  parametermodel_p.hpp  parametervaluemodel.cpp  parametervaluemodel_p.hpp  (+6 more)
libqicore-compat/src/python/: pyregisterthread.cpp  pyregisterthread.hpp  pythonboxgenerator.cpp  pythonboxgenerator.hpp  pythonloader.cpp  pythonloader.hpp
libqicore-compat/tests/: CMakeLists.txt  test_behaviorexecuter.cpp  test_statemachine.cpp  test_timeline.cpp  test_xmlparser.cpp
libqicore-compat/tests/behaviors/angry_1/: B1_0_0_Light_AngryEyes1.py  B1_0_0_Light_AngryEyes1.xml  B1_0_FaceLeds0.fld  B1_1_0_B1_0_0_Get_File_Path1.py  B1_1_0_B1_0_0_Get_File_Path1.xml  B1_1_0_B1_0_0_Play_Sound_File2.py  B1_1_0_B1_0_0_Play_Sound_File2.xml  B1_1_0_Play_Sound1.anim  B1_1_0_Play_Sound1.fld  B1_1_0_Play_Sound1.py  B1_1_0_Play_Sound1.xml  B1_1_Sound0.fld  behavior.xar  root1.anim  root1.bhs  root1.py  root1.xml
libqicore-compat/tests/behaviors/executesay/: B_0_0_B1_0_0_Localized_Text5.py  B_0_0_B1_0_0_Localized_Text5.xml  B_0_0_B1_0_0_Say_Text2.py  B_0_0_B1_0_0_Say_Text2.xml  B_0_0_Say1.fld  B_0_0_Say1.py  B_0_0_Say1.xml  behavior.xar  root_1.fld  root_1.xml
libqicore/cmake/: config.cmake.in
libqicore/example/file/: CMakeLists.txt  api.hpp  file_example.cpp  imagestore.cpp  imagestore.hpp  imagestore_proxy.cpp
libqicore/qicore/: behavior.hpp  behavior.idl.qi  file.hpp  fileoperation.hxx  loglistener.hpp  logmanager.hpp  logmessage.hpp  logprovider.hpp  task-call.hpp  task.hpp
libqicore/qicore/detail/: fileoperation.hxx
libqicore/src/: behavior.cpp  behaviormodel.cpp  file_proxy.cpp  fileimpl.cpp  fileoperation.cpp  format_behavior_model.cpp  loglistener_proxy.cpp  logmanager_proxy.cpp  logprovider_proxy.cpp  logproviderimpl.cpp  logproviderimpl.hpp  progressnotifier.cpp  progressnotifier_p.hpp  progressnotifier_proxy.cpp  registration.cpp
libqicore/tests/: CMakeLists.txt  send_robot_icon.cpp  test_behavior.cpp  test_file.cpp
python/: CMakeLists.txt
python/converter/: box.py  code_patcher.py  nameMapBuilder.py  newFormatGenerator.py  node.py  timeline.py  xar_converter.py  xar_types.py
python/converter/tests/: behavior.xar  simple-2.xar  simple.xar  test_all.sh
python/executer/: code_patcher.py  executer.py  parse_folder.py
python/executer/tests/: generate_objects.sh
python/py/: conftest.py  function_generator.py  newnaoqi.py  objectFactory.py  object_factory.py  qicoreLegacy.py  qicore_legacy.py  xar_converter.py
python/py/converter/: __init__.py  behaviorKeyFrame.py  behaviorLayer.py  behavior_keyframe.py  behavior_layer.py  box.py  code_patcher.py  diagram.py  file_writer.py  nameMapBuilder.py  name_map_builder.py  newFormatGenerator.py  new_format_generator.py  node.py  sax_parser.py  timeline.py  xar_converter.py  xar_parser.py  xar_types.py
python/py/qicore/: object_factory.py  qicore_legacy.py
python/src/: newframemanager.i  newinaoqi.i  qicore.i
python/tests/: test_all.sh
python/tests/behavior2/: B_0_0_Hello1.bhs  root_1.xml
services/logger/: CMakeLists.txt
services/logger/logger/: logger.hpp  logger_service.hpp  logprovider.hpp
services/logger/qicore/: log.idl.qi  loglistener_bind.cpp  loglistener_proxy.hpp  logmanager_bind.hpp  logmanager_proxy.hpp  logmessage.hpp  logprovider.hpp  logprovider_bind.cpp  logprovider_proxy.hpp
services/logger/src/: logger.cpp  logger.hpp  logger_service.hpp  loggermanager.cpp  loggermanager.hpp  loglistenerimpl.cpp  loglistenerimpl.hpp  logmanager.cpp  logmanager.hpp  logmanagerimpl.cpp  logmanagerimpl.hpp  logprovider.cpp
services/logger/tests/: CMakeLists.txt  dump.cpp  listener.cpp  listener.py  manager.cpp  provider.cpp  provider.py  test_logger.cpp
(+127 files in other folders)
